Changed back button to look like native iOS back button for About US and Groups views.

--- a/FoodCollector/Base.lproj/AboutUsSB.storyboard
+++ b/FoodCollector/Base.lproj/AboutUsSB.storyboard
@@ -95,6 +95,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="backButton" destination="eKJ-NB-X8w" id="HYQ-AE-ngg"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgM-9v-8XY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
